--- a/.gitignore
+++ b/.gitignore
@@ -105,18 +105,17 @@ ENV/
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
+# PyCharm settings
 .idea
 
+# Project specific output files
+sandbox.py
 *.dat
 *.fit
 *.txt
 *.xtc
 *.pdb
 *.png
-
-sandbox.py
-
 *.ipynb
-
 *.pkl
 *.npy
